V.Next
---------
- [MINOR] Changes to support safe deserialization of KeyPair in Linux (#2319)
- [MINOR] Request camera permission on the WebViewAuthorizationFragment (#2258)
- [MINOR] Deprecate legacy telemetry code (#2327)
- [PATCH] Update nimbus-jose-jwt 9.37.3 (#2326)
- [MINOR] Gracefully handles unexpected error in encryption layer (#2318)

V.17.1.1
---------
- [PATCH] Add timeout to backup IPC mechanism (#2323)

V.17.1.0
---------
- [MINOR] Add flight to control silent token timeout (#2311)
- [PATCH] Revert #2305 (#2307)
- [PATCH] Handle Receiver Callback Exception in CommandDispatcher interactive command (#2305)
- [MINOR] Add IpcStrategyWithBackup (#2301)
- [PATCH] Fix MSAL Issue 1864 (#2280)
- [MINOR] Add AccountManagerBackupIpcStrategyTargetingSpecificBrokerApp (#2294)
- [MINOR] Adding additional fields to JwtRequestBody for sending PRTv4 requests (#2289)
- [MINOR] Update SignIn/Signup parameters classes for Native Auth (#2284)
- [MINOR] Add IsQrPinAvailableCommand, controllers behavior and define constants for the isQrAvailable API (#2219)
- [MINOR] Add PreferredAuthMethod to interactive token flow (#2245)
- [MINOR] Implement updates of the native auth web API (#2261)
- [MINOR] Update ResetPasswordPollCompletion related command, results, and responses to support signing in a user after a successful password reset. (#2281)
- [PATCH] Create consistent use of correlation ID throughout a user flow (#2283)
- [MINOR] Added support for setting no log level (#2282)
- [MINOR] Redirect to hub app in case of NAA flow (#2290)
- [MINOR] Changes to support app based targeting of telemetry sampling rate (#2302)
- [MINOR] Adding base64Url encoding method (#2303)

v.17.0.1
---------
- [PATCH] Update robolectricVersion 4.11.1 (#2292)
- [PATCH] Removing CredMan (Only for 17.0.1) (#2295)

V.17.0.0
---------
- [PATCH] Add JWT header field for KDF version (#2220)
- [MINOR] Catch unknown Keystore errors during decryption (#2255)