@@ -62,6 +62,7 @@ import com.microsoft.identity.common.java.providers.microsoft.MicrosoftAuthoriza
 import com.microsoft.identity.common.java.providers.microsoft.MicrosoftTokenErrorResponse;
 import com.microsoft.identity.common.java.providers.microsoft.azureactivedirectory.AzureActiveDirectory;
 import com.microsoft.identity.common.java.providers.microsoft.azureactivedirectory.AzureActiveDirectoryCloud;
+import com.microsoft.identity.common.java.providers.microsoft.azureactivedirectory.AzureActiveDirectorySlice;
 import com.microsoft.identity.common.java.providers.microsoft.azureactivedirectory.ClientInfo;
 import com.microsoft.identity.common.java.providers.oauth2.AuthorizationResult;
 import com.microsoft.identity.common.java.providers.oauth2.AuthorizationResultFactory;
@@ -138,9 +139,31 @@ public class MicrosoftStsOAuth2Strategy
     public MicrosoftStsOAuth2Strategy(@NonNull final MicrosoftStsOAuth2Configuration config,
                                       @NonNull final OAuth2StrategyParameters parameters) throws ClientException {
         super(config, parameters);
-        setTokenEndpoint(config.getTokenEndpoint().toString());
-        if (parameters.isUsingOpenIdConfiguration()){
-            loadOpenIdProviderConfiguration();
+
+        if (parameters.isUsingOpenIdConfiguration()) {
+            try {
+                if (config.getSlice() != null && config.getSlice().getDataCenter() != null) {
+                    String extraParams = "?" + AzureActiveDirectorySlice.DC_PARAMETER + "=" + config.getSlice().getDataCenter();
+                    loadOpenIdProviderConfiguration(extraParams);
+                } else {
+                    loadOpenIdProviderConfiguration();
+                }
+                String openIdConnectTokenEndpoint = mOpenIdProviderConfiguration.getTokenEndpoint();
+                if (!StringUtil.isNullOrEmpty(openIdConnectTokenEndpoint)) {
+                    setTokenEndpoint(openIdConnectTokenEndpoint);
+                } else {
+                    setTokenEndpoint(config.getTokenEndpoint().toString());
+                }
+            }  catch (ServiceException e) {
+                Logger.error(
+                        TAG,
+                        "There was a problem with loading the openIdConfiguration",
+                        e
+                );
+                setTokenEndpoint(config.getTokenEndpoint().toString());
+            }
+        } else {
+            setTokenEndpoint(config.getTokenEndpoint().toString());
         }
     }
 
@@ -850,18 +873,11 @@ public class MicrosoftStsOAuth2Strategy
      * This will cause the strategy to fetch the authorization endpoint from OpenId Configuration rather
      * than generating one with the default authorization endpoint
      */
-    private void loadOpenIdProviderConfiguration() {
-        try {
-            final OpenIdProviderConfigurationClient client =
-                    new OpenIdProviderConfigurationClient();
-            mOpenIdProviderConfiguration = client.loadOpenIdProviderConfigurationFromAuthority(mConfig.getAuthorityUrl().toString());
-        } catch (ServiceException e) {
-            Logger.error(
-                    TAG,
-                    "There was a problem with loading the openIdConfiguration",
-                    e
-            );
-        }
+    private void loadOpenIdProviderConfiguration() throws ServiceException {
+        final OpenIdProviderConfigurationClient client =
+                new OpenIdProviderConfigurationClient();
+        mOpenIdProviderConfiguration = client.loadOpenIdProviderConfigurationFromAuthority(mConfig.getAuthorityUrl().toString());
+
     }
 
     /**
@@ -870,17 +886,9 @@ public class MicrosoftStsOAuth2Strategy
      * than generating one with the default authorization endpoint
      */
     @SuppressFBWarnings
-    private void loadOpenIdProviderConfiguration(@NonNull final String extraParams) {
-        try {
-            final OpenIdProviderConfigurationClient client =
-                    new OpenIdProviderConfigurationClient();
-            mOpenIdProviderConfiguration = client.loadOpenIdProviderConfigurationFromAuthorityWithExtraParams(mConfig.getAuthorityUrl().toString(), extraParams);
-        } catch (ServiceException e) {
-            Logger.error(
-                    TAG,
-                    "There was a problem with loading the openIdConfiguration",
-                    e
-            );
-        }
+    private void loadOpenIdProviderConfiguration(@NonNull final String extraParams) throws ServiceException {
+        final OpenIdProviderConfigurationClient client =
+                new OpenIdProviderConfigurationClient();
+        mOpenIdProviderConfiguration = client.loadOpenIdProviderConfigurationFromAuthorityWithExtraParams(mConfig.getAuthorityUrl().toString(), extraParams);
     }
 }
