@@ -282,6 +282,7 @@ public abstract class OAuth2Strategy
                     if (!StringUtil.isNullOrEmpty(slice.getDataCenter())) {
                         commonUriBuilder.setParameter(AzureActiveDirectorySlice.DC_PARAMETER, slice.getDataCenter());
                     }
+
                     mTokenEndpoint = commonUriBuilder.build().toString();
                 } catch (final URISyntaxException e) {
                     throw new ClientException(ClientException.MALFORMED_URL, e.getMessage(), e);
