@@ -56,6 +56,6 @@ public class CIAMTestAuthority extends CIAMAuthority {
         final MicrosoftStsOAuth2Configuration config = createOAuth2Configuration();
 
         // return a custom ropc test strategy to perform ropc flow for test automation
-        return new ResourceOwnerPasswordCredentialsTestStrategy(config);
+        return new ResourceOwnerPasswordCredentialsTestStrategy(config, true);
     }
 }
