@@ -1,3 +1,7 @@
+V.Next 2
+---------
+- [MINOR] Add support for CIAM custom domain (#2314)
+
 V.Next
 ---------
 - [MINOR] Changes to support safe deserialization of KeyPair in Linux (#2319)
